--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,6 @@
 
 <app-first-component></app-first-component>
 <app-parent-data [name]="UserName" [data]="UserData"></app-parent-data>
+<app-directives></app-directives>
+<app-if-render></app-if-render>
+
