--- a/src/app/components/first-component/first-component.component.html
+++ b/src/app/components/first-component/first-component.component.html
@@ -1,5 +1,8 @@
-<h2>Titulo 2</h2>
-<p>first-component works!</p>
-<div>
-  <a href="#">Link2</a>
+
+<div class="class">
+  <h2>Titulo 2</h2>
+  <p>first-component works!</p>
+  <div>
+    <a href="#">Link2</a>
+  </div>
 </div>
