--- a/src/app/components/parent-data/parent-data.component.html
+++ b/src/app/components/parent-data/parent-data.component.html
@@ -1,4 +1,6 @@
-<h2>Descrevendo usuário</h2>
-<p>Meu nome é : {{name}}</p>
-<p>Meu email é : {{data.email}}</p>
-<p>Meu trabalho é : {{data.job}}</p>
+<div class="class">
+  <h2>Descrevendo usuário</h2>
+  <p>Meu nome é : {{name}}</p>
+  <p>Meu email é : {{data.email}}</p>
+  <p>Meu trabalho é : {{data.job}}</p>
+</div>
