--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,9 @@
 <app-parent-data [name]="UserName" [data]="UserData"></app-parent-data>
 <app-directives></app-directives>
 <app-if-render></app-if-render>
+<app-eventos></app-eventos>
+<app-emitter></app-emitter>
+<app-list-render></app-list-render>
+<app-pipes></app-pipes>
+<app-two-way-data-binding></app-two-way-data-binding>
 
