--- a/src/app/components/list-render/list-render.component.html
+++ b/src/app/components/list-render/list-render.component.html
@@ -4,6 +4,7 @@
   <li *ngFor="let animal of animals"> <strong>Nome:</strong> {{animal.name}} -
     <strong>Tamanho:</strong> {{animal.size}}
     <button (click)="showAge(animal)">Mostrar Idade</button>
+    <button (click)=" removeAnimal(animal)">Excluir</button>
  </ul>
  <h3>{{animalDetails}}</h3>
 </div>
