--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,7 @@
 <h2>Titulo</h2>
 
-<div>
-  <a href="#">Link1</a>
-</div>
-
-<app-first-component></app-first-component>
-<app-parent-data [name]="UserName" [data]="UserData"></app-parent-data>
-<app-directives></app-directives>
-<app-if-render></app-if-render>
-<app-eventos></app-eventos>
-<app-emitter></app-emitter>
-<app-list-render></app-list-render>
-<app-pipes></app-pipes>
-<app-two-way-data-binding></app-two-way-data-binding>
-
+<nav>
+  <a routerLink="/">Home</a> <br>
+  <a routerLink="/list">Lista</a>
+</nav>
+<router-outlet></router-outlet>
